# plasma

./: .gitignore  README.md
.github/workflows/: micropython.yml  python-linting.yml
boards/: common.cmake  manifest-common.py  usermod-common.cmake
boards/plasma_2040/: manifest.txt  mpconfigboard.cmake  mpconfigboard.h  pins.csv  usermodules.cmake
boards/plasma_2350_w/: manifest.txt  mpconfigboard.h  pimoroni_plasma2350w.h  pins.csv
boards/plasma_rp2040/: manifest.py
boards/plasma_stick_2040_w/: mpconfigboard.h  pins.csv
boards/plasma_w_rp2040/: mpconfigboard.cmake  mpconfigboard.h
boards/plasma_w_rp2350/: manifest.py  mpconfigboard.cmake  mpconfigboard.h
ci/: micropython.sh  python.sh  ruff.toml
daemon/: install.sh
daemon/etc/plasma/: plasma.conf
docs/: plasma.md
documentation/: LEGACY.md  REFERENCE.md
examples/: README.md  config.yml  example-config.yml  hue_twinkles_encoder.py  larson_hue.py  led-strip-mini-hat-apa102.yml  led-strip-mini-hat-ws2812.yml  level.py  main.py  monitor.py  pir.py  pulse.py  rainbow.py  rainbows.py  rgb-led-and-buttons.py  rotary.py  solid-colour.py  sparkles.py  thermometer_bme280.py
examples/plasma2040/: alternating-blinkies.py  co2.py  level.py  monitor.py  rainbow.py  random-blinkies.py  rgb-led-and-buttons.py  rotary.py
examples/plasma2350w/: chase_web.md  chase_web.py  color_test.py  main_chase.py
examples/plasma_stick/: README.md  alternating-blinkies.py  cheerlights.py  co2.py  encoder.py  fire.py  moon.py  moon_rtc.py  pir.py  pulse.py  snow.py  sparkles.py  thermometer_pico.py  tree.py  weather.py
fx/: config.yml  test.py
fx/plasmafx/: MANIFEST.in  README.md  setup.cfg
fx/plasmafx/plasmafx/: __init__.py  core.py  plugins.py
fx/plasmafx_plugin_cycle/: MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
fx/plasmafx_plugin_cycle/plasmafx_plugin_cycle/: __init__.py
modules/common/: boot.py  pimoroni.py  qwstpad.py
modules/wireless/: ezwifi.py  lte.py
