# -*- coding: utf-8 -*-
[metadata]
name = plasmafx
version = 1.0.0
author = Philip Howard
author_email = phil@pimoroni.com
description = LED effects sequencer for Plasma LED Driver
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Rasperry Pi LED
url = https://www.pimoroni.com
project_urls =
	GitHub=https://www.github.com/pimoroni/plasma
license = MIT
license_files = LICENSE.txt
classifiers =
	Development Status :: 4 - Beta
	Operating System :: POSIX :: Linux
	License :: OSI Approved :: MIT License
	Intended Audience :: Developers
	Programming Language :: Python :: 3.7
	Topic :: Software Development
	Topic :: Software Development :: Libraries
	Topic :: System :: Hardware

[options]
packages = plasmafx
python_requires = >= 3.7
install_requires =

[flake8]
exclude =
	test.py
	tests/
	.tox,
	.eggs,
	.git,
	__pycache__,
	build,
	dist
ignore =
	E501
