# -*- coding: utf-8 -*-
[metadata]
name = plasmafx-plugin-cycle
version = 1.0.0
author = Philip Howard
author_email = phil@pimoroni.com
description = Colour cycle plugin for plasmafx
long_description = file: README.md
long_description_content_type = text/markdown
keywords = plugin, effects, lighting
url = https://www.pimoroni.com
project_urls =
	GitHub=https://www.github.com/pimoroni/plasma
license = MIT
license_files = LICENSE.txt
classifiers =
	Development Status :: 4 - Beta
	Operating System :: POSIX :: Linux
	License :: OSI Approved :: MIT License
	Intended Audience :: Developers
	Programming Language :: Python :: 3.7
	Topic :: Software Development
	Topic :: Software Development :: Libraries
	Topic :: System :: Hardware

[options]
packages = plasmafx_plugin_cycle
python_requires = >= 3.7
install_requires =

[options.entry_points]
plasmafx.effect_plugins =
    Cycle = plasmafx_plugin_cycle:Cycle

[flake8]
exclude =
	test.py
	tests/
	.tox,
	.eggs,
	.git,
	__pycache__,
	build,
	dist
ignore =
	E501
